# CW_6

./: pyproject.toml
skymarket/ads/: models.py  permissions.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py
